fixed styling error on phone, margin left was causing miss alignment with about content, pushed tab navigation to tab on phone displays

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -134,6 +134,15 @@
 }
 
 @media (max-width: 768px) {
+  .page-2 {
+    .tab {
+      top: 0;
+      left: 0;
+      right: 0;
+      position: absolute;
+    }
+  }
+
   #image_me{
     height: 150px;
     widows: 150px;
